2005-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1185672.c: added
	* src/mcs51/gen.c (aopGetUsesAcc, genCpl, genAnd, genOr, genXor): fixed
	  bug 1185672
	* src/mcs51/gen.c (genCall): added comments, made it look safer
	* src/mcs51/gen.c (genEndFunction): simplified

2005-04-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (serialRegAssign): fixed bug 1189609

2005-04-14 Borut Razem <borut.razem AT siol.net>

	* fixed bug 1045046 - SIGSEGV with really simple code?:
	  src/pic/pcode.c (pCodeInitRegisters)- pseudo stack size increased to 16
	  src/pic/ralloc.c (typeRegWithIdx) - error message on pseudo stack overflow

2005-04-14 Borut Razem <borut.razem AT siol.net>

	* src/pic16/gen.c (genInline), src/pic16/main.c (_process_pragma),
	  src/pic16/device.h: temporarily disabled experimental #inline pragma
	  for 2.5.0 release

2005-04-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/z80/stdio.h,
	* device/include/z80/string.h: removed these highly incomplete files so
	  SDCC can use the default ones in device/include/

2005-04-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genEndFunction): removed unused variable to fix
	gcc warning.
	* device/lib/Makefile.in: default PORTINCDIR to the mcs51 subdir to
	fix sdcpp warnings.

2005-04-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/malloc.h: removed redundant __reentrant prototypes
	* device/lib/_mullong.c: added working xstack variant in asm (C version
	  doesn't pass regression tests)
	* device/lib/bpx.c: used __data and made bpx char for mcs51
	* src/SDCCast.c (decorateType): removed unused GPTYPE_IDATA,
	  (createFunction): fixed bug with xstackPtr
	* src/SDCCcse.c: corrected comments
	* src/SDCCopt.c (convertToFcall): fixed warning in MSVC,
	  (killDeadCode, eBBlockFromiCode): removed unused code
	* src/SDCCsymt.h: removed unused GPTYPE_GPTR and GPTYPE_IDATA,
	  corrected comments